# Magnetometer-Simulator

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
config/: pni_rm3100.yaml
include/mag_simulator_package/: mag_simulator.h  mag_simulator_structures.h
launch/: mag_simulator.launch.py  odometry_test_publisher.py
src/: mag_simulator.cpp  mag_simulator_node.cpp  odometry_test_publisher_node.cpp
test/: mag_simulator_test.cpp
